Rewrote linked lists.

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
+# OVER POWERFUL MOBILE ROGUELIKE 2.0
+
 This is the README for OPMORL 2.0.
 OPMORL 2.0 intends to be a full-featured Rogue-like written in C using the ncurses library.
